force-app/main/default/objects/Loyalty_Transaction__c/Loyalty_Transaction__c.object-meta.xml
<CustomObject>
    <label>Loyalty Transaction</label>
    <pluralLabel>Loyalty Transactions</pluralLabel>
    <nameField>
        <displayFormat>LOY-{00000}</displayFormat>
        <label>Loyalty Transaction Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>