force-app/main/default/objects/Loyalty_Transaction__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Customer__c</referenceTo>
    <relationshipLabel>Loyalty Transactions</relationshipLabel>
    <relationshipName>Loyalty_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>