force-app/main/default/objects/Loyalty_Transaction__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order__c</referenceTo>
    <relationshipLabel>Loyalty Transactions</relationshipLabel>
    <relationshipName>Loyalty_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>