force-app/main/default/objects/Loyalty_Transaction__c/fields/Points_Redeemed__c.field-meta.xml
<CustomField>
    <fullName>Points_Redeemed__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Points Redeemed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>